Adjusted pitch width for correct player alignment

--- a/src/app/formation-builder/pitch/pitch.component.scss
+++ b/src/app/formation-builder/pitch/pitch.component.scss
@@ -1,8 +1,8 @@
 @use "../../shared/styles/variables";
 
 .pitch {
-  width: 900px;
-  max-width: 900px;
+  width: 768px;
+  max-width: 768px;
   height: 768px;
   max-height: 768px;
   background-color: variables.$bg-dark;
